# swagger/swagger-output.json
@@ -334,7 +334,17 @@
           {
             "bearerAuth": []
           }
-        ]
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateThreadDTO"
+              }
+            }
+          }
+        }
       }
     },
     "/api/threads/{id}": {
@@ -643,7 +653,7 @@
         "type": "object",
         "properties": {
           "email": {
-            "type": "integer"
+            "type": "string"
           },
           "password": {
             "type": "string"
@@ -689,7 +699,7 @@
           "content": {
             "type": "string"
           },
-          "images": {
+          "Images": {
             "type": "file"
           }
         }
